--- a/.github/workflows/deploy-to-huggingface.yml
+++ b/.github/workflows/deploy-to-huggingface.yml
@@ -24,4 +24,4 @@ jobs:
           HF_SPACE_REPO: ${{ secrets.HF_SPACE_REPO }}
         run: |
           git remote add space https://user:${HF_TOKEN}@huggingface.co/spaces/${HF_SPACE_REPO}
-          git push space main --force
+          git push space master --force
